# qt-data-cmake

./: CMakeLists.txt  main.cpp  vcpkg.json
qt-data-cmake-generator-excel/: CMakeLists.txt  postsreportgenerator.cpp  postsreportgenerator.h  qt-data-cmake-generator-excel_global.h
qt-data-cmake-generator-html/: CMakeLists.txt  postsreportgenerator.cpp  postsreportgenerator.h  qt-data-cmake-generator-html_global.h  utils.cpp  utils.h
qt-data-cmake-prototype/: CMakeLists.txt  ilikerepository.h  ipostrepository.h  ipostsreportgenerator.h  isessionrepository.h  iuserrepository.h
qt-data-cmake-prototype/data/: post.h  settings.h  user.h
qt-data-cmake-repository-rest-api/: CMakeLists.txt  likerepository.cpp  likerepository.h  postrepository.cpp  postrepository.h  qt-data-cmake-repository-rest-api_global.h  userrepository.cpp  userrepository.h  utils.cpp  utils.h
qt-data-cmake-repository-sqlite/: CMakeLists.txt  likerepository.cpp  likerepository.h  postrepository.cpp  postrepository.h  qt-data-cmake-repository-sqlite_global.h  sessionrepository.cpp  sessionrepository.h  userrepository.cpp  userrepository.h
qt-data-cmake-test/: CMakeLists.txt  tst_qtdatacmaketest.cpp
templates/: posts.html  posts.xlsx
